--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,9 @@
 
     <title>Component Button</title>
 
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
